--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.datasource.password=12345678
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 swan.bat.start.file.name = naswan.bat
 data.source = http://lcss.ocean.ru/meteo1pi/dat
 swan.instructions.file.path = C:\\Users\\bull3\\Desktop\\wws\\Curonian.swn
 wws.directory = C:\\Users\\bull3\\Desktop\\wws\\
-millis.delay = 150
+millis.delay = 300000
 upload.path = /Users/matvey/IdeaProjects/WindWaveSystem/images
 swan.result.map = /Users/matvey/IdeaProjects/WindWaveSystem/wws/curres.txt
 #C:\\Users\\bull3\\Desktop\\wws\\curres.txt
