--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
 
-millis.delay = 1200000
+millis.delay = 120000
 swan.bat.start.file.name = naswan.bat
 data.source = http://lcss.ocean.ru/meteo1pi/dat
-swan.instructions.file.path = C:\\Users\bull3\\Desktop\\wwsCuronian.swn
-wws.directory = C:\\Users\bull3\\Desktop\\wws
+swan.instructions.file.path = C:\\Users\\bull3\\Desktop\\wws\\Curonian.swn
+wws.directory = C:\\Users\\bull3\\Desktop\\wws
 
 
 
@@ -26,4 +26,4 @@ upload.path = C:\\Users\\bull3\\IdeaProjects\\WindWaveSystem\\images
 #swan.result.map = /Users/matvey/IdeaProjects/WindWaveSystem/wws/curres.txt
 
 #WINDOWS swan.result.map
-swan.result.map =  C:\\Users\bull3\\Desktop\\wws\\curres.txt
+swan.result.map =  C:\\Users\\bull3\\Desktop\\wws\\curres.txt
