--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ wws.directory = C:\\Users\\bull3\\Desktop\\wws
 #upload.path = /Users/matvey/IdeaProjects/WindWaveSystem/images
 
 #WINDOWS upload.path
-upload.path = C:\\Users\\bull3\\IdeaProjects\\WindWaveSystem\\images
+upload.path = \\images
 
 
 #MAC swan.result.map
