GLOBAL REFACTORING WIND ENTITY CREATING

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=80
+
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/wws?useSSL=false&ampuseUnicode=true&amp;characterEncoding=utf8
 spring.datasource.username=root
@@ -7,23 +9,23 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
 
-millis.delay = 120000
+millis.delay = 300000
 swan.bat.start.file.name = naswan.bat
 data.source = http://lcss.ocean.ru/meteo1pi/dat
-swan.instructions.file.path = C:\\Users\\bull3\\Desktop\\wws\\Curonian.swn
-wws.directory = C:\\Users\\bull3\\Desktop\\wws
+swan.instructions.file.path = C:\\Users\\Admin\\Desktop\\wws\\Curonian.swn
+wws.directory = C:\\Users\\Admin\\Desktop\\wws
 
 
 
 #MAC upload.path
-#upload.path = /Users/matvey/IdeaProjects/WindWaveSystem/images
+upload.path = /images
 
 #WINDOWS upload.path
-upload.path = \\images
+#upload.path = \\images
 
 
 #MAC swan.result.map
-#swan.result.map = /Users/matvey/IdeaProjects/WindWaveSystem/wws/curres.txt
+swan.result.map = /Users/matvey/IdeaProjects/WindWaveSystem/wws/curres.txt
 
 #WINDOWS swan.result.map
-swan.result.map =  C:\\Users\\bull3\\Desktop\\wws\\curres.txt
+#swan.result.map =  C:\\Users\\Admin\\Desktop\\wws\\curres.txt
