--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,12 @@
     </dependencies>
 
     <build>
+        <finalName>wws-app</finalName>
         <plugins>
             <plugin>
+                <configuration>
+                    <executable>true</executable>
+                </configuration>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
