REPOSITORY DIVIDED INTO DAO-SERVICE CLASSES. ADDED SIMPLE DESIGN FOR THE WEB-PAGE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 millis.delay = 300000
 swan.bat.start.file.name = naswan.bat
 data.source = http://lcss.ocean.ru/meteo1pi/dat
-swan.instructions.file.path = C:\\Users\\Admin\\Desktop\\wws\\Curonian.swn
 wws.directory = C:\\Users\\Admin\\Desktop\\wws
 
-
+#Mac
+swan.instructions.file.path = /Users/matvey/IdeaProjects/WindWaveSystem/wws/Curonian.swn
+#Windows
+#swan.instructions.file.path = C:\\Users\\Admin\\Desktop\\wws\\Curonian.swn
 
 #MAC upload.path
 upload.path = /images
