FIXING OF ISSUES

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,25 +9,25 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
 
-millis.delay = 300000
+millis.delay = 5000
 swan.bat.start.file.name = naswan.bat
 data.source = http://lcss.ocean.ru/meteo1pi/dat
-wws.directory = C:\\Users\\Admin\\Desktop\\wws
+wws.directory = C:\\Users\\bull3\\Desktop\\wws
 
 #Mac
-swan.instructions.file.path = /Users/matvey/IdeaProjects/WindWaveSystem/wws/Curonian.swn
+#swan.instructions.file.path = /Users/matvey/IdeaProjects/WindWaveSystem/wws/Curonian.swn
 #Windows
-#swan.instructions.file.path = C:\\Users\\Admin\\Desktop\\wws\\Curonian.swn
+swan.instructions.file.path = C:\\Users\\bull3\\Desktop\\wws\\Curonian.swn
 
 #MAC upload.path
-upload.path = /images
+#upload.path = /images
 
 #WINDOWS upload.path
-#upload.path = \\images
+upload.path = \\images
 
 
 #MAC swan.result.map
-swan.result.map = /Users/matvey/IdeaProjects/WindWaveSystem/wws/curres.txt
+#swan.result.map = /Users/matvey/IdeaProjects/WindWaveSystem/wws/curres.txt
 
 #WINDOWS swan.result.map
-#swan.result.map =  C:\\Users\\Admin\\Desktop\\wws\\curres.txt
+swan.result.map =  C:\\Users\\bull3\\Desktop\\wws\\curres.txt
