FIXING OF ISSUES

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,15 +9,15 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
 
-millis.delay = 200000
+millis.delay = 80000
 swan.bat.start.file.name = naswan.bat
 data.source = http://lcss.ocean.ru/meteo1pi/dat
-wws.directory = C:\\Program Files\\wws\\wws
+wws.directory = C:\\Users\\bull3\\Desktop\\wws
 
 #Mac
 #swan.instructions.file.path = /Users/matvey/IdeaProjects/WindWaveSystem/wws/Curonian.swn
 #Windows
-swan.instructions.file.path = C:\\Program Files\\wws\\Curonian.swn
+swan.instructions.file.path = C:\\Users\\bull3\\Desktop\\wws\\Curonian.swn
 
 #MAC upload.path
 #upload.path = /images
@@ -30,4 +30,4 @@ upload.path = \\images
 #swan.result.map = /Users/matvey/IdeaProjects/WindWaveSystem/wws/curres.txt
 
 #WINDOWS swan.result.map
-swan.result.map =  C:\\Program Files\\wws\\curres.txt
+swan.result.map =  C:\\Users\\bull3\\Desktop\\wws\\curres.txt
